style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lobster&family=Mona+Sans:ital,wght@0,200..900;1,200..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
:root {
    color-scheme: light dark;
    --github-color: #24292f;
    --github-text-color: white;
    --bluesky-color: #1185FE;
    --youtube-color: red;
    --twitch-color: #9146ff;
    --email-color: gray;
    --steam-color: #144b7e;
    --shadow-distance: .25rem;
    --button-shadow-distance: calc(var(--shadow-distance) * 2);
    --light-intensity: 30%;
    --under-shadow: calc(var(--light-intensity) * 2);
    --shadow-color: red;
}

@media (prefers-color-scheme: dark) {
    :root {
        --shadow-color: white;
        --github-color: white;
        --github-text-color: #24292f;
    }
}

body {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0;
    margin: 0;
    font-family: system-ui;
    text-align: center;
    width: 100vw;
    height: 100vh;
    font-size: 3rem;
}

main {
    margin: 0 auto;
}


a {
    text-decoration: none;
    text-align: center;
    vertical-align: middle;
}

h1 {
    font-family: "Lobster";
    text-shadow: 0 var(--shadow-distance) color-mix(in srgb, var(--shadow-color) , black var(--under-shadow));
    color: red;
    animation-name: colourize-h1;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    animation-duration: 10s;
    margin-top: 0;
    margin-bottom: .5rem;
}

button {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    width: 3rem;
    height: 3rem;
    vertical-align: middle;
    border-radius: .5rem;
    border-style: solid;
    font-family: system-ui;
    vertical-align: middle;
    color: white;
    padding: .25rem;
    font-size: 2rem;
    border-width: .25rem;

}

button:not([disabled]):active {
    box-shadow: none !important;
    transform: translateY(var(--button-shadow-distance));
}

button:disabled {
    opacity: .25;
}

button[name="Github"] {
    color: var(--github-text-color);
    background-color: var(--github-color);
    box-shadow: 0 var(--button-shadow-distance) color-mix(in srgb, var(--github-color), black var(--under-shadow));
    border-color: color-mix(in srgb, var(--github-color), black var(--light-intensity));
}

button[name="Bluesky"] {
    background-color: var(--bluesky-color);
    box-shadow: 0 var(--button-shadow-distance) color-mix(in srgb, var(--bluesky-color), black var(--under-shadow));
    border-color: color-mix(in srgb, var(--bluesky-color), black var(--light-intensity));
}

button[name="YouTube"] {
    background-color: var(--youtube-color);
    box-shadow: 0 var(--button-shadow-distance) color-mix(in srgb, var(--youtube-color), black var(--under-shadow));
    border-color: color-mix(in srgb, var(--youtube-color), black var(--light-intensity));
}

button[name="Twitch"] {
    background-color: var(--twitch-color);
    box-shadow: 0 var(--button-shadow-distance) color-mix(in srgb, var(--twitch-color), black var(--under-shadow));
    border-color: color-mix(in srgb, var(--twitch-color), black var(--light-intensity));
}

button[name="Email"] {
    background-color: var(--email-color);
    box-shadow: 0 var(--button-shadow-distance) color-mix(in srgb, var(--email-color), black var(--under-shadow));
    border-color: color-mix(in srgb, var(--email-color), black var(--light-intensity));
}

button[name="Steam"] {
    background-color: var(--steam-color);
    box-shadow: 0 var(--button-shadow-distance) color-mix(in srgb, var(--steam-color), black var(--under-shadow));
    border-color: color-mix(in srgb, var(--steam-color), black var(--light-intensity));
}

@keyframes colourize-h1 {
    10% {
        color: orangered;
        text-shadow: 0 var(--shadow-distance) color-mix(in srgb, orangered, black var(--under-shadow));
    }
    20% {
        color: orange;
        text-shadow: 0 var(--shadow-distance) color-mix(in srgb, orange, black var(--under-shadow));
    }
    30% {
        color: yellowgreen;
        text-shadow: 0 var(--shadow-distance) color-mix(in srgb, yellowgreen, black var(--under-shadow));
    }
    40% {
        color: green;
        text-shadow: 0 var(--shadow-distance) color-mix(in srgb, green, black var(--under-shadow));
    }
    50% {
        color: teal;
        text-shadow: 0 var(--shadow-distance) color-mix(in srgb, teal, black var(--under-shadow));
    }
    60% {
        color: turquoise;
        text-shadow: 0 var(--shadow-distance) color-mix(in srgb, turquoise, black var(--under-shadow));
    }
    70% {
        color: purple;
        text-shadow: 0 var(--shadow-distance) color-mix(in srgb, purple, black var(--under-shadow));
    }
    80% {
        color: mediumpurple;
        text-shadow: 0 var(--shadow-distance) color-mix(in srgb, mediumpurple, black var(--under-shadow));
    }
    90% {
        color: palevioletred;
        text-shadow: 0 var(--shadow-distance) color-mix(in srgb, palevioletred, black var(--under-shadow));
    }
    100% {
        text-shadow: 0 var(--shadow-distance) color-mix(in srgb, var(--shadow-color) , black var(--under-shadow));
        color: red;
    }
}

/* 
:root {
    color-scheme: light dark;
    --main-size: 512px;
    --half-main-size: calc(var(--main-size) / 2);
    --glow-blur: 10rem;
    --glow-spread: calc(var(--glow-blur) / 2);
    --glow-opacity: .1;
    --main-background-opacity: .05;
    --h1-h1-size: 5rem;
    --h1-span-h1-size: calc(var(--h1-h1-size) + 1rem);
}

body {
    padding: 0;
    margin: 0;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

main {
    position: absolute;
    display: grid;
    grid-template-columns: 2;
    grid-template-rows: 2;
    background-color: initial;
    top: calc(var(--under-shadow) - var(--half-main-size));
    left: calc(var(--under-shadow) - var(--half-main-size));
    width: var(--main-size);
    height: var(--main-size);
    animation-name: colourize-glow;
    animation-duration: 60s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    border-radius: 2rem;
    border-width: .1rem;
    border-style: solid;
    background-color: transparent;
    box-shadow: 0 0 var(--glow-blur) var(--glow-spread) rgba(0, 0, 0, var(--glow-opacity));
}

section {
    padding: 2rem;
    vertical-align: middle;
}

h1 {
    font-family: 'Lobster';
    font-size: var(--h1-h1-size);
    text-shadow: calc(var(--h1-h1-size) / 20) calc(var(--h1-h1-size) / 20) 0 black;
    background-image: linear-gradient(to bottom right, black, mediumaquamarine, mediumblue, mediumorchid, mediumpurple, mediumseagreen, mediumslateblue, mediumspringgreen, mediumturquoise, mediumvioletred);
    background-size: 1000% 1000%;
    background-clip: text;
    color: transparent;
    background-repeat: 2;
    animation-name: colourize-h1;
    animation-duration: 600s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    animation-composition: add;
}

br {
    font-size: 1rem;
}

h1 span {
    font-size: var(--h1-span-h1-size);
}

@media (prefers-color-scheme: dark) {
    h1 {
        background-image: linear-gradient(to bottom right, white, mediumaquamarine, mediumblue, mediumorchid, mediumpurple, mediumseagreen, mediumslateblue, mediumspringgreen, mediumturquoise, mediumvioletred);
    }
    main {
        box-shadow: 0 0 var(--glow-blur) var(--glow-spread) rgba(255, 255, 255, var(--glow-opacity));
    }
}

@keyframes colourize-h1 {
    100% {
		background-position: 500% 500%;
	}
}

@keyframes colourize-glow {
    10% {
        border-color: mediumaquamarine;
        background-color: rgba(102, 205, 170, var(--main-background-opacity));
        box-shadow: 0 0 var(--glow-blur) var(--glow-spread) rgba(102, 205, 170, var(--glow-opacity));
    }
    var(--light-intensity) {
        border-color: mediumblue;
        background-color: rgba(0, 0, 205, var(--main-background-opacity));
        box-shadow: 0 0 var(--glow-blur) var(--glow-spread) rgba(0, 0, 205, var(--glow-opacity));
    }
    30% {
        border-color: mediumorchid;
        background-color: rgba(186, 85, 211, var(--main-background-opacity));
        box-shadow: 0 0 var(--glow-blur) var(--glow-spread) rgba(186, 85, 211, var(--glow-opacity));
    }
    40% {
        border-color: mediumpurple;
        background-color: rgba(147, 112, 216, var(--main-background-opacity));
        box-shadow: 0 0 var(--glow-blur) var(--glow-spread) rgba(147, 112, 216, var(--glow-opacity));
    }
    var(--under-shadow) {
        border-color: mediumseagreen;
        background-color: rgba(60, 179, 113, var(--main-background-opacity));
        box-shadow: 0 0 var(--glow-blur) var(--glow-spread) rgba(60, 179, 113, var(--glow-opacity));
    }
    60% {
        border-color: mediumslateblue;
        background-color: rgba(123, 104, 238, var(--main-background-opacity));
        box-shadow: 0 0 var(--glow-blur) var(--glow-spread) rgba(123, 104, 238, var(--glow-opacity));
    }
    70% {
        border-color: mediumspringgreen;
        background-color: rgba(0, 250, 154, var(--main-background-opacity));
        box-shadow: 0 0 var(--glow-blur) var(--glow-spread) rgba(0, 250, 154, var(--glow-opacity));
    }
    80% {
        border-color: mediumturquoise;
        background-color: rgba(72, 209, 204, var(--main-background-opacity));
        box-shadow: 0 0 var(--glow-blur) var(--glow-spread) rgba(72, 209, 204, var(--glow-opacity));
    }
    90% {
        border-color: mediumvioletred;
        background-color: rgba(199, 21, 133, var(--main-background-opacity));
        box-shadow: 0 0 var(--glow-blur) var(--glow-spread) rgba(199, 21, 133, var(--glow-opacity));
    }
    100% {
        border-color: initial;
        background-color: transparent;
    }
}

@media (prefers-color-scheme: dark) {
    body {
        background-image: linear-gradient(to bottom right, black, violet, indigo, blue, green, yellow, orange, red);
    }
} */

